# ASDL

./: .asdlrc  .git_commit_message  .gitignore  README.md  asdl_quick_start.md  debug_expansion.py  debug_ota.py  dump_ota_json.py  git_commit_message  ota_two_stg.yaml  pyproject.toml  regenerate_netlist.py  requirements.txt  test_fixed_ota.py  test_g001_detection.py  test_manual.py  verify_ota_parsing.py
.devcontainer/: devcontainer.json
config/: backends.yaml
context/: ASDL_workflow_guideline.md  NEXT_SESSION_READY.md  asdl_imports_prd.md  backlog_ux.md  backlog_validation.md  bugs.md  done.md  implementation_plan.md  import_implementations.md  memory.md  memory_compiler.md  project_status_20250918.md  todo.md  todo_cli.md  todo_compiler.md  todo_elaborator.md  todo_environment_variables.md  todo_generator.md  todo_imports.md  todo_logging.md  todo_parameter_system.md  todo_parser.md  todo_schema.md  todo_validator.md  todo_visualizer.md
doc/: ASDL_parameter_implementation_plan.md  ASDL_schema  ASDL_schema.md  ASDL_schema_v0p4  asdl_import_dependency_management.md  asdl_syntax.md  data_structure_design.md  diagnostic_codes.md  elaborator_design_plan.md  implementation_plan.md  language.md  linter_compiler_architecture.md  pattern_expansion_rules.md  schema.json  schema.txt
docs/: conf.py  index.rst  outstanding_topics.md
examples/: README.md  bias_gen.yml  common_source_amp.yml  compile_demo.py  current_source.yml  diff_pair.yml  invalid_missing_file_info.yml  inverter.asdl  inverter.spice  inverter.yml  ota_concise.yaml  ota_two_stg.yaml  setup.sh  test.asdl  (+21 more)
(+1355 files in other folders)
