[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "asdl"
version = "0.1.0"
description = "Analog Structured-Description Language"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0",
    "click>=8.0.0",
    "pydantic",
    "ruamel.yaml",
    "PySpice",
    "matplotlib"
]

[project.scripts]
asdlc = "asdl.cli:cli"
asdl = "asdl.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "src"
] 